Begin defining access point

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.google.code.findbugs:jsr305:2.0.1'
 }
 
 sourceCompatibility = "1.7"
