--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'java'
 
+repositories {
+    jcenter()
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.squareup.picasso:picasso:2.5.2'
